fix: add reload component after add new vehicle / hide scrollbar on vehicle list view

--- a/src/WebUI/GarageGenius.WebUI/src/app/core/main/main.component.scss
+++ b/src/WebUI/GarageGenius.WebUI/src/app/core/main/main.component.scss
@@ -5,6 +5,10 @@ main {
   flex-grow: 1;
 }
 
+::-webkit-scrollbar {
+  display: none;
+}
+
 mat-sidenav-container,
 mat-sidenav-content {
   display: flex;
