--- a/src/WebUI/GarageGenius.WebUI/src/app/vehicles/vehicle-details/vehicle-details.component.scss
+++ b/src/WebUI/GarageGenius.WebUI/src/app/vehicles/vehicle-details/vehicle-details.component.scss
@@ -4,7 +4,6 @@
   display: flex;
   flex-direction: column;
   height: 100%;
-  padding: 0.5rem;
 }
 
 .container {
